# r1-manager

./: .gitignore  LED_CONTROL.md  LICENSE  README.md  build.gradle  gradle.properties  gradlew.bat  install-release.bat  settings.gradle
app/: build.gradle  proguard-rules.pro  r1manager.jks
app/src/main/: AndroidManifest.xml
app/src/main/assets/web/: index.html  manifest.json  song-styles.css  style.css  sw.js
app/src/main/assets/web/js/: apps.js  files.js  hardware.js  logs.js  main.js  memory.js  network.js  player.js  system.js  tabs.js  utils.js  xiaozhi.js  zing.js
app/src/main/cpp/: CMakeLists.txt  opus_decoder.cpp  opus_recorder.cpp  vad_jni.cpp
app/src/main/cpp/libfvad/include/: fvad.h
app/src/main/cpp/libfvad/src/: fvad.c
app/src/main/cpp/libfvad/src/signal_processing/: division_operations.c  energy.c  resample_48khz.c  signal_processing_library.h
app/src/main/cpp/libfvad/src/vad/: vad_core.c  vad_core.h  vad_filterbank.c  vad_filterbank.h  vad_gmm.c  vad_gmm.h  vad_sp.c  vad_sp.h
app/src/main/java/ai/kitt/snowboy/: snowboyJNI.java
app/src/main/java/com/phicomm/r1manager/: App.java  BootReceiver.java  MainActivity.java  WebServerService.java
app/src/main/java/com/phicomm/r1manager/config/: AppConfig.java  XiaozhiConfig.java
app/src/main/java/com/phicomm/r1manager/mcp/: McpManager.java
app/src/main/java/com/phicomm/r1manager/mcp/client/: McpClient.java  McpConnectionManager.java
app/src/main/java/com/phicomm/r1manager/mcp/model/: McpMessage.java  McpTool.java  McpToolParameter.java  McpToolResponse.java
app/src/main/java/com/phicomm/r1manager/mcp/registry/: McpToolExecutor.java  McpToolRegistry.java
app/src/main/java/com/phicomm/r1manager/mcp/tools/: BaseMcpTool.java  IpAddressTool.java  MemoryTool.java  MusicControlTool.java  WolTool.java
app/src/main/java/com/phicomm/r1manager/server/: WebServer.java
app/src/main/java/com/phicomm/r1manager/util/: AppLog.java  LogBuffer.java  NetworkUtils.java  SecurityUtils.java  ThreadManager.java  Tls12SocketFactory.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/mipmap-mdpi/: ic_launcher.xml
app/src/main/res/values/: strings.xml
(+59 files in other folders)
